[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/gui/weapon_manager.gd" type="Script" id=1]
[ext_resource path="res://images/gui/weapon_displayer.png" type="Texture" id=2]
[ext_resource path="res://fonts/Aldrich/Aldrich-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://images/gui/exp_bar_small_empty.png" type="Texture" id=4]
[ext_resource path="res://images/gui/exp_bar_small_full.png" type="Texture" id=5]
[ext_resource path="res://images/gui/next_button.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="DynamicFont" id=2]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )
VBoxContainer/constants/separation = 1

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[sub_resource type="RectangleShape2D" id=6]

[node name="weapon_manager" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="weapon_button_container" type="Control" parent="."]
margin_bottom = 40.0

[node name="weapon_displayer_back" type="Sprite" parent="weapon_button_container"]
position = Vector2( 240, 100 )
texture = ExtResource( 2 )

[node name="weapon_button" type="TouchScreenButton" parent="weapon_button_container"]
position = Vector2( 240, 99 )
scale = Vector2( 15, -7 )
shape = SubResource( 1 )
shape_centered = false

[node name="test_button" type="Button" parent="weapon_button_container/weapon_button"]
visible = false
margin_left = -6.0
margin_top = -10.0
margin_right = 6.0
margin_bottom = 10.0

[node name="label_containers" type="VBoxContainer" parent="weapon_button_container"]
margin_left = 115.0
margin_top = 45.0
margin_right = 370.0
margin_bottom = 155.0
rect_min_size = Vector2( 255, 110 )
theme = SubResource( 3 )
custom_constants/separation = 15
alignment = 1

[node name="label_weapon_name" type="Label" parent="weapon_button_container/label_containers"]
margin_right = 255.0
margin_bottom = 24.0
theme = SubResource( 5 )
text = "Plasma Charge"
align = 1

[node name="level_container" type="HBoxContainer" parent="weapon_button_container/label_containers"]
margin_top = 39.0
margin_right = 255.0
margin_bottom = 55.0
alignment = 1

[node name="label_weapon_level" type="Label" parent="weapon_button_container/label_containers/level_container"]
margin_left = 50.0
margin_right = 89.0
margin_bottom = 16.0
text = "Lvl 0"

[node name="weapon_exp_bar" type="TextureProgress" parent="weapon_button_container/label_containers/level_container"]
margin_left = 93.0
margin_right = 205.0
margin_bottom = 16.0
value = 75.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )

[node name="label_weapon_damage" type="Label" parent="weapon_button_container/label_containers"]
margin_top = 70.0
margin_right = 255.0
margin_bottom = 86.0
text = "45 Inferno Damage"
align = 1

[node name="label_weapon_cost" type="Label" parent="weapon_button_container/label_containers"]
margin_top = 101.0
margin_right = 255.0
margin_bottom = 117.0
text = "Costs 45% charge power"
align = 1

[node name="next_button_container" type="Control" parent="."]
margin_left = 435.0
margin_top = 95.0
margin_right = 435.0
margin_bottom = 135.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next_button_sprite" type="Sprite" parent="next_button_container"]
texture = ExtResource( 6 )

[node name="next_button" type="TouchScreenButton" parent="next_button_container"]
position = Vector2( -34, -31 )
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="back_button_container" type="Control" parent="."]
margin_left = 45.0
margin_top = 100.0
margin_right = 45.0
margin_bottom = 140.0

[node name="back_button_sprite" type="Sprite" parent="back_button_container"]
texture = ExtResource( 6 )
flip_h = true

[node name="back_button" type="TouchScreenButton" parent="back_button_container"]
position = Vector2( -35, -30 )
scale = Vector2( 3, 3 )
shape = SubResource( 6 )

[node name="atk_speed_timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
autostart = true
